--- a/src/components/select/Select.module.scss
+++ b/src/components/select/Select.module.scss
@@ -205,3 +205,7 @@
 	@include option-width-before;
 	background-image: url('./../../images/narrow.svg');
 }
+
+.arrow_open {
+	transform: rotate(0deg);
+}
